--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "dependencies": {
         "bulma": "^0.9.0",
         "gatsby": "^4.0.0",
+        "gatsby-plugin-google-gtag": "^4.22.0",
         "gatsby-plugin-image": "^2.0.0",
         "gatsby-plugin-netlify": "^5.0.0",
         "gatsby-plugin-netlify-cms": "^6.0.0",
-        "gatsby-plugin-purgecss": "^6.0.0",
         "gatsby-plugin-react-helmet": "^5.0.0",
-        "gatsby-plugin-sass": "^5.0.0",
+        "gatsby-plugin-sass": "^5.22.0",
         "gatsby-plugin-sharp": "^4.0.0",
+        "gatsby-plugin-sitemap": "^5.22.0",
         "gatsby-remark-copy-linked-files": "^5.0.0",
         "gatsby-remark-images": "^6.0.0",
         "gatsby-remark-relative-images": "^2.0.2",
@@ -24,11 +25,11 @@
         "netlify-cms-app": "^2.15.72",
         "netlify-cms-media-library-cloudinary": "^1.3.10",
         "netlify-cms-media-library-uploadcare": "^0.5.10",
+        "node-sass": "^7.0.1",
         "prop-types": "^15.6.0",
         "react": "^17.0.0",
         "react-dom": "^17.0.0",
         "react-helmet": "^6.0.0",
-        "sass": "^1.43.2",
         "uuid": "^8.0.0"
     },
     "keywords": [
