--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
         "serve": "gatsby serve",
         "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "lint": "./node_modules/.bin/eslint",
+        "lint": "./node_modules/.bin/eslint .",
         "repl": "gatsby repl"
     },
     "devDependencies": {
@@ -53,7 +53,7 @@
         "eslint-config-airbnb": "^19.0.4",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-jsx-a11y": "^6.6.1",
-        "eslint-plugin-react": "^7.31.1",
+        "eslint-plugin-react": "^7.31.8",
         "eslint-plugin-react-hooks": "^4.6.0",
         "prettier": "^2.0.5"
     },
