Add sitemap, beginning of io stuff for lastmod

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -35,7 +35,7 @@ collections:
  
   - name: "site-alert"
     label: "Site Alert (above navbar)"    
-    folder: "posts"
+    folder: "content"
     slug: "alert"
     create: false
     fields:      
