--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "next",
         "build": "next build",
+        "postbuild": "next-sitemap",
         "start": "next start",
         "export": "npm run build && next export",
         "lint": "eslint ."
@@ -22,8 +23,10 @@
         "@emotion/styled": "^11.10.5",
         "@mui/icons-material": "^5.10.16",
         "@mui/material": "^5.10.17",
+        "glob": "^8.1.0",
         "gray-matter": "^4.0.3",
         "next": "^12.3.0",
+        "next-sitemap": "^3.1.52",
         "phone": "^3.1.30",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
